# pagebreaks

./: .copier-answers.yml  .eslintignore  .gitignore  .prettierignore  DEVELOPMENT.md  README.md  RELEASE.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  install.json  jest.config.js  package.json  pagebreaks.code-workspace  pyproject.toml  tsconfig.eslint.json  tsconfig.json
.assets/css/: style.css
.github/workflows/: build.yml  check-release.yml  publish-to-test-pypi.yml
.husky/: pre-commit
Pagebreak/: __init__.py
Pagebreaks/: __init__.py
Pagebreaks/labextension/: build_log.json  package.json
Pagebreaks/labextension/schemas/Pagebreaks/: package.json.orig  plugin.json
Pagebreaks/labextension/static/: lib_index_js.9fe0b43d017c8311bf20.js  lib_index_js.9fe0b43d017c8311bf20.js.map  node_modules_style-loader_dist_runtime_injectStylesIntoStyleTag_js-node_modules_style-loader_-19bff1.1a39c7b5074cd5f8d061.js  node_modules_style-loader_dist_runtime_injectStylesIntoStyleTag_js-node_modules_style-loader_-19bff1.1a39c7b5074cd5f8d061.js.map  remoteEntry.555184540d1e74a04d6c.js  remoteEntry.555184540d1e74a04d6c.js.map  style.js  style_index_js.6ac9d71fe8b5d1e4db12.js  style_index_js.6ac9d71fe8b5d1e4db12.js.map  vendors-node_modules_lodash_lodash_js.328541fc8512d30af403.js  vendors-node_modules_lodash_lodash_js.328541fc8512d30af403.js.map
backend/pagebreak_ip/: LICENSE  Untitled.ipynb  Untitled10.ipynb  Untitled11.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  ch13.ipynb  extension.py  pagebreakDEV.ipynb  pagebreak_magic.py  pagebreaks_ip.py  pyproject.toml  readme.md
backend/pagebreak_ip/src/: __init__.py  pagebreak_magic.py  pagebreaks_ip.py
backend/pagebreak_ip/tests/: conftest.py  test_ast.py  test_ip_plugin.py
backend/pagebreaksip/: MANIFEST.in  development.md  makefile  setup.cfg
backend/pagebreaksip/src/pagebreaksip/: __init__.py  pagebreak_magic.py  pagebreaks_ip.py
backend/pagebreaksip/tests/: conftest.py  test_ast.py  test_ip_plugin.py
binder/: environment.yml  postBuild
frontend/: .copier-answers.yml  .gitignore  README.md  RELEASE.md  install.json  package.json
frontend/.github/workflows/: build.yml  check-release.yml
frontend/binder/: postBuild
frontend/schema/: plugin.json
frontend/src/: index.ts
frontend/style/: base.css
frontend/ui-tests/: package.json
pagebreak_ip/: Untitled.ipynb  extension.py  pyproject.toml
pagebreak_ip/tests/: conftest.py  test_ip_plugin.py
pagebreaks/: __init__.py
schema/: plugin.json
src/: activeManager.tsx  commands.ts  constants.ts  events.ts  index.ts  model.ts  schema.ts  schemaManager.ts  schemaManager.tsx  styling.ts  types.ts  utils.ts  variableListToolbar.tsx
src/__tests__/: Pagebreaks.spec.ts
style/: base.css
ui-tests/: jupyter_server_test_config.py  package.json
ui-tests/tests/: Pagebreak.spec.ts  Pagebreaks.spec.ts
ui-tests/tests/notebooks/: basic_test.ipynb
