[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagebreaks_ip"
version = "0.0.1"
dependencies = [
    "requests",
    "loguru",
    "IPython",
    "pandas",
    "numpy"
]
[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = ["tests/*"]  # empty by default

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]