[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagebreaks_ip"
version = "0.0.1-c1"
dependencies = [
    "requests",
    "loguru",
    "IPython",
    "pandas",
    "numpy",
    "jsondiff",
    "json",
    "typing",
    "itertools"
]
authors = [
{ name="Eric Rawn", email="erawn@berkeley.edu"},
]
description = "IPython Backend Plugin for Pagebreaks"
readme = "readme.md"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = ["*.ipynb"]  # empty by default

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.urls]
Homepage = "https://github.com/erawn/pagebreaks"
Issues = "https://github.com/erawn/pagebreaks/issues"