[metadata]
name = pagebreaksip
version = 0.1.4
author = Eric Rawn
description = Backend for Pagebreaks
long_description = file: readme.md
long_description_content_type = text/markdown
keywords =
    jupyter
    ipython
    magic
    extension
    namespace
url = https://github.com/erawn/pagebreaks
license = BSD-3
license_files =
    LICENSE.txt
classifiers =
    Environment :: Console
    Framework :: IPython
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir = =src
packages = find:
python_requires = >=3.10
install_requires =
    ipython>=8.26.0
    pandas>=2.2.2
    numpy>=2.0.0
    jsondiff>=2.1.2
    loguru>=0.7.2
    pytest>=8.2.2


[options.extras_require]
test =
    pytest>=8.2.2
    pytest-cov==4.0.0

[options.packages.find]
where = src

[tool:pytest]
addopts =
    -vvv
    --cov=pagebreaksip
    --cov-report=xml
    --cov-report=term-missing
    --cov-branch
testpaths =
    tests
